--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,22 @@ server.pid
 *.eml
 /dist/
 .cache
+
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/.cache
+/.target
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+/project/*-shim.sbt
